# MMAG-VO

./: README.md  REPRODUCTION.md  pyproject.toml  requirements.txt
configs/: kitti_intrinsics_00.yaml  mmag_nyu_camvid.yaml  vo_gru_kitti.yaml
results/: paper_reported_metrics.json
scripts/: run_inference_seq00.sh  run_train_mmag.sh  run_train_vo.sh
src/mmag_vo/: config.py
src/mmag_vo/data/: datasets.py  transforms.py
src/mmag_vo/evaluation/: eval_depth_seg.py  eval_vo.py
src/mmag_vo/inference/: run_pipeline.py
src/mmag_vo/losses/: depth.py  segmentation.py  vo.py
src/mmag_vo/metrics/: depth.py  odometry.py  segmentation.py
src/mmag_vo/models/: fusion.py  mmag.py  vo_gru.py
src/mmag_vo/training/: train_mmag.py  train_vo_gru.py
src/mmag_vo/utils/: print_paper_results.py  seed.py
src/mmag_vo/visualization/: visualize.py
src/mmag_vo/vo/: orb_depth.py  orb_slam2_adapter.py
tests/: test_models.py
weights/: README.md
